--- a/pages/category/category.wxml
+++ b/pages/category/category.wxml
@@ -1,2 +1,9 @@
 <!--pages/category/category.wxml-->
-<text>商品分类 还未实现</text>
+<view class="category">
+ <!-- 分类菜单 -->
+ <m-menu categorys="{{categorys}}"/>
+
+ <!--content-->
+ <m-content subcategorys="{{subcategorys}}"
+            categoryDetail="{{categoryDetail}}"></m-content>
+</view>
