--- a/pages/profile/profile.wxml
+++ b/pages/profile/profile.wxml
@@ -1,2 +1,7 @@
 <!--pages/profile/profile.wxml-->
-<text>个人中心</text>
+<m-header></m-header>
+
+<m-info/>
+
+<m-list infos="{{orderList}}"/>
+<m-list infos="{{serviceList}}"/>
