--- a/components/m-tab-control/m-tab-control.wxml
+++ b/components/m-tab-control/m-tab-control.wxml
@@ -2,7 +2,7 @@
 <view class="tab-view">
  <block wx:for="{{titles}}"
         wx:key="index">
-  <view class="tab-item {{currentIndex == index ? 'active':'' }}
+  <view class="tab-item {{currentIndex == index ? 'active':'' }}"
         data-index="{{index}}"
         bindtap="itemClick">
     <text data-index="{{index}}">{{item}}</text>
